--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navigasi Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#"
-        ><img src="images/logo.svg" width="50%"
+        ><img src="./images/logo.svg" width="50%"
       /></a>
       <button
         class="navbar-toggler navbar-dark"
@@ -53,7 +53,7 @@
       <div class="container">
         <img
           class="images-jumbotron"
-          src="/images/illustration-intro.png"
+          src="./images/illustration-intro.png"
           alt=""
           srcset=""
         />
@@ -73,7 +73,7 @@
     <div class="section-featured pb-5">
       <div class="row">
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-access-anywhere.svg" alt="" />
+          <img src="./images/icon-access-anywhere.svg" alt="" />
           <p class="font-bold mt-2">Access your files, anywhere</p>
           <p class="font-lighter featured-caption">
             The ability to use a smartphone, tablet or computer to access your
@@ -81,7 +81,7 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-security.svg" alt="" />
+          <img src="./images/icon-security.svg" alt="" />
           <p class="font-bold mt-2">Security you can trust</p>
           <p class="font-lighter featured-caption">
             2-factor authentication and user-controlled encryption are just a
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-collaboration.svg" alt="" />
+          <img src="./images/icon-collaboration.svg" alt="" />
           <p class="font-bold mt-2">Real-time collaboration</p>
           <p class="font-lighter featured-caption">
             Securely share files and folders with friends, family and colleagues
@@ -97,7 +97,7 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-any-file.svg" alt="" />
+          <img src="./images/icon-any-file.svg" alt="" />
           <p class="font-bold mt-2">Store any type of file</p>
           <p class="font-lighter featured-caption">
             Whether you're sharing holidays photos or work documents, fylo has
@@ -112,7 +112,7 @@
     <div class="section-productive mt-5">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <img src="/images/illustration-stay-productive.png" class="w-100" />
+          <img src="./images/illustration-stay-productive.png" class="w-100" />
         </div>
         <div class="col-sm-12 col-md-6 mt-5">
           <h2 class="title-productive font-bold">
@@ -145,7 +145,7 @@
             </p>
             <div class="row mt-4">
               <div class="image-cropper">
-                <img src="images/profile-1.jpg" />
+                <img src="./images/profile-1.jpg" />
               </div>
               <div class="ml-2 align-items-center">
                 <span class="font-bold username">Satish Patel</span>
@@ -163,7 +163,7 @@
             </p>
             <div class="row mt-4">
               <div class="image-cropper">
-                <img src="images/profile-2.jpg" />
+                <img src="./images/profile-2.jpg" />
               </div>
               <div class="ml-2 align-items-center">
                 <span class="font-bold username">Bruce McKenzie</span>
@@ -181,7 +181,7 @@
             </p>
             <div class="row mt-4">
               <div class="image-cropper">
-                <img src="images/profile-3.jpg" />
+                <img src="./images/profile-3.jpg" />
               </div>
               <div class="ml-2 align-items-center">
                 <span class="font-bold username">Iva Boyd</span>
@@ -218,13 +218,11 @@
     <footer class="pt-4 my-md-5 pt-md-5">
       <div class="row">
         <div class="col-12 col-md">
-          <img src="/images/logo.svg" width="100" height="30"
+          <img 
             class="mb-2"
-            src="../../assets/brand/bootstrap-solid.svg"
+            src="/images/logo.svg" width="100" height="30"
             alt=""
-            width="24"
-            height="24"
-          />
+                      />
           <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
         </div>
         <div class="col-6 col-md">
