--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container">
         <img
           class="images-jumbotron"
-          src="/images/illustration-intro.png"
+          src="./images/illustration-intro.png"
           alt=""
           srcset=""
         />
@@ -73,7 +73,7 @@
     <div class="section-featured pb-5">
       <div class="row">
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-access-anywhere.svg" alt="" />
+          <img src="./images/icon-access-anywhere.svg" alt="" />
           <p class="font-bold mt-2">Access your files, anywhere</p>
           <p class="font-lighter featured-caption">
             The ability to use a smartphone, tablet or computer to access your
@@ -81,7 +81,7 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-security.svg" alt="" />
+          <img src="./images/icon-security.svg" alt="" />
           <p class="font-bold mt-2">Security you can trust</p>
           <p class="font-lighter featured-caption">
             2-factor authentication and user-controlled encryption are just a
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-collaboration.svg" alt="" />
+          <img src="./images/icon-collaboration.svg" alt="" />
           <p class="font-bold mt-2">Real-time collaboration</p>
           <p class="font-lighter featured-caption">
             Securely share files and folders with friends, family and colleagues
@@ -97,7 +97,7 @@
           </p>
         </div>
         <div class="col-sm-12 col-md-6 text-center mt-5">
-          <img src="/images/icon-any-file.svg" alt="" />
+          <img src="./images/icon-any-file.svg" alt="" />
           <p class="font-bold mt-2">Store any type of file</p>
           <p class="font-lighter featured-caption">
             Whether you're sharing holidays photos or work documents, fylo has
@@ -112,7 +112,7 @@
     <div class="section-productive mt-5">
       <div class="row">
         <div class="col-sm-12 col-md-6">
-          <img src="/images/illustration-stay-productive.png" class="w-100" />
+          <img src="./images/illustration-stay-productive.png" class="w-100" />
         </div>
         <div class="col-sm-12 col-md-6 mt-5">
           <h2 class="title-productive font-bold">
@@ -127,7 +127,7 @@
             for live collaboration. No email attachments required.
           </p>
           <button class="btn button-productive">
-            See how fylo works <img src="/images/icon-arrow.svg" />
+            See how fylo works <img src="./images/icon-arrow.svg" />
           </button>
         </div>
       </div>
@@ -218,13 +218,7 @@
     <footer class="pt-4 my-md-5 pt-md-5">
       <div class="row">
         <div class="col-12 col-md">
-          <img src="/images/logo.svg" width="100" height="30"
-            class="mb-2"
-            src="../../assets/brand/bootstrap-solid.svg"
-            alt=""
-            width="24"
-            height="24"
-          />
+          <img src="./images/logo.svg" width="100" height="30" class="mb-2" />
           <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
         </div>
         <div class="col-6 col-md">
